[package]
name = "nanoball"
version = "0.1.1"
edition = "2021"

[dependencies]
gd32vf103xx-hal = "0.5.0"
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
embedded-graphics = "0.8.0"
embedded-hal = "0.2.7"

[dependencies.longan-nano]
path = "/local/src/old/longan-nano"
# version = "0.3.0"
features = ["lcd"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
