[package]
name = "nanoball"
version = "0.1.2"
edition = "2021"

[dependencies]
gd32vf103xx-hal = "0.5"
riscv-rt = "0.11"
panic-halt = "0.2"
embedded-graphics = "0.7"
embedded-hal = "0.2.7"

[dependencies.longan-nano]
version = "0.3"
features = ["lcd"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
